# MVO_Gauss

./: .gitignore  .gitmodules  README.txt  ekf.yaml
devel/: .catkin  (+4 more)
fusion/: CMakeLists.txt
fusion/src/: fusion.cpp
src/abb/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  abb_node  abb_node.cpp  cmake_install.cmake  filter.cpp  filter.h  function.cpp  function.h  odom_node.cpp  package.xml  pointcloud.txt  real.txt
src/abb/atomic_configure/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
src/abb/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/abb/catkin_generated/installspace/: abb.pc  abbConfig.cmake
src/abb/devel/: .catkin  local_setup.sh
src/abb/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/abb/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/abb/trash .cpp/: abb.cpp  abb_camera_node.cpp  b.cpp
src/imu/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/imu/atomic_configure/: local_setup.sh
src/imu/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/imu/devel/: .catkin  .rosinstall  setup.sh
src/imu/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/imu/src/: imu.cpp  imu_node.cpp
src/nav/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/nav/atomic_configure/: .rosinstall
src/nav/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  setup_cached.sh
src/nav/devel/: .catkin  local_setup.sh  setup.sh
src/nav/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/nav/src/: nav_node.cpp
src/odom/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/odom/atomic_configure/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
src/odom/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/odom/devel/: .catkin
src/odom/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/odom/src/: odom_node.cpp
(+116 files in other folders)
